Update project branding from "Amazigh Lineage Heritage" to "North African Amazigh Heritage" across all HTML files, sitemap, and robots.txt. Change URLs to reflect new domain "northafricanorigins.com" and update metadata for improved SEO and consistency.

--- a/glossary.html
+++ b/glossary.html
@@ -8,25 +8,25 @@
     <title>Glossary | Amazigh Genetics Terms</title>
     <meta name="description" content="Glossary of key genetics terms used on this site: haplogroup, TMRCA, aDNA, mtDNA, and Y-DNA.">
     <meta name="keywords" content="genetics glossary, haplogroup meaning, TMRCA definition, ancient DNA, mtDNA, Y-DNA, Amazigh genetics terms">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
     <meta property="og:title" content="Glossary | Amazigh Genetics Terms">
     <meta property="og:description" content="Simple definitions for core genetics terms used throughout the lineage analysis.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/glossary.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/genetic-tree.jpg">
+    <meta property="og:url" content="https://northafricanorigins.com/glossary.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/genetic-tree.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Glossary | Amazigh Genetics Terms">
     <meta name="twitter:description" content="Definitions for haplogroup, TMRCA, aDNA, mtDNA, and Y-DNA.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/genetic-tree.jpg">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/genetic-tree.jpg">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aitmhend-dna.github.io/glossary.html">
+    <link rel="canonical" href="https://northafricanorigins.com/glossary.html">
 
     <!-- Favicon and Performance -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -50,7 +50,7 @@
       "@type": "DefinedTermSet",
       "name": "Amazigh Genetics Glossary",
       "description": "Core genetics definitions used across this website",
-      "url": "https://aitmhend-dna.github.io/glossary.html"
+      "url": "https://northafricanorigins.com/glossary.html"
     }
     </script>
 </head>
@@ -60,7 +60,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -142,7 +142,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
     </footer>
 </body>
 </html>
