--- a/maps-sites.html
+++ b/maps-sites.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Maps & Sites | Amazigh Lineage Heritage</title>
+    <title>Maps & Sites | North African Amazigh Heritage</title>
     <meta name="description" content="Field map hub for Takarkori, Morocco Neolithic archaeology sites, and the Souss-Massa region with quick Google satellite and OpenStreetMap links.">
     <meta name="keywords" content="Takarkori map, Morocco Neolithic sites map, Souss-Massa map, Amazigh archaeology locations, Google satellite links, OpenStreetMap">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
-    <meta property="og:title" content="Maps & Sites | Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
+    <meta property="og:title" content="Maps & Sites | North African Amazigh Heritage">
     <meta property="og:description" content="Takarkori, Morocco Neolithic sites, and Souss-Massa map links for rapid geographic context.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/maps-sites.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/map-maghreb.png">
+    <meta property="og:url" content="https://northafricanorigins.com/maps-sites.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/map-maghreb.png">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Maps & Sites | Amazigh Lineage Heritage">
+    <meta name="twitter:title" content="Maps & Sites | North African Amazigh Heritage">
     <meta name="twitter:description" content="Dedicated map page with satellite and open-map links for core research locations.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/map-maghreb.png">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/map-maghreb.png">
 
-    <link rel="canonical" href="https://aitmhend-dna.github.io/maps-sites.html">
+    <link rel="canonical" href="https://northafricanorigins.com/maps-sites.html">
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -42,11 +42,11 @@
       "@type": "CollectionPage",
       "name": "Maps & Sites",
       "description": "Mapped locations referenced across Amazigh lineage research pages",
-      "url": "https://aitmhend-dna.github.io/maps-sites.html",
+      "url": "https://northafricanorigins.com/maps-sites.html",
       "isPartOf": {
         "@type": "WebSite",
-        "name": "Amazigh Lineage Heritage",
-        "url": "https://aitmhend-dna.github.io/"
+        "name": "North African Amazigh Heritage",
+        "url": "https://northafricanorigins.com/"
       }
     }
     </script>
@@ -56,7 +56,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -190,7 +190,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | <a href="contact.html">Contact</a> | Geographic context for Amazigh lineage research</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | <a href="contact.html">Contact</a> | Geographic context for Amazigh lineage research</p>
     </footer>
 </body>
 </html>
