--- a/research.html
+++ b/research.html
@@ -8,25 +8,25 @@
     <title>Research Blog | Amazigh Genetic Studies</title>
     <meta name="description" content="Latest genetic research on North African and Amazigh lineages: ancient DNA studies, haplogroup analysis, and population genetics papers.">
     <meta name="keywords" content="Amazigh genetics research, North African DNA studies, E-M183 haplogroup, H1 mtDNA, ancient DNA North Africa, Berber population genetics">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
     <meta property="og:title" content="Research Blog | Amazigh Genetic Studies">
     <meta property="og:description" content="Latest genetic research on North African and Amazigh lineages: ancient DNA studies, haplogroup analysis, and population genetics papers.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/research.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta property="og:url" content="https://northafricanorigins.com/research.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/E-PF2546-map.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Research Blog | Amazigh Genetic Studies">
     <meta name="twitter:description" content="Latest genetic research on North African and Amazigh lineages.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/E-PF2546-map.png">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aitmhend-dna.github.io/research.html">
+    <link rel="canonical" href="https://northafricanorigins.com/research.html">
 
     <!-- Favicon and Performance -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -52,13 +52,13 @@
       "description": "Latest genetic research on North African and Amazigh lineages",
       "author": {
         "@type": "Organization",
-        "name": "Amazigh Lineage Heritage Project"
+        "name": "North African Amazigh Heritage Project"
       },
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://aitmhend-dna.github.io/research.html"
+        "@id": "https://northafricanorigins.com/research.html"
       },
-      "url": "https://aitmhend-dna.github.io/research.html"
+      "url": "https://northafricanorigins.com/research.html"
     }
     </script>
 </head>
@@ -68,7 +68,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -237,7 +237,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
     </footer>
 
     <script>
