--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -8,25 +8,25 @@
     <title>E-M183 Recent Origin | Solé-Morata 2017</title>
     <meta name="description" content="Summary of Solé-Morata et al. 2017: whole Y-chromosome sequencing dates E-M81/E-M183 TMRCA to ~2,000-3,000 years ago with star-like expansion pattern.">
     <meta name="keywords" content="E-M183 haplogroup, E-M81 origin, Y-chromosome sequencing, Solé-Morata 2017, Berber Y-DNA, E-PF2546, North African paternal lineage, Scientific Reports">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
     <meta property="og:title" content="E-M183 Recent Origin — Solé-Morata et al. 2017">
     <meta property="og:description" content="Whole Y-chromosome sequencing reveals E-M81 expanded only ~2,000-3,000 years ago.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/research/e-m183-recent-origin-2018.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-distribution.png">
+    <meta property="og:url" content="https://northafricanorigins.com/research/e-m183-recent-origin-2018.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/E-PF2546-distribution.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="E-M183 Recent Origin — Solé-Morata et al. 2017">
     <meta name="twitter:description" content="Whole Y-chromosome sequencing reveals E-M81 expanded only ~2,000-3,000 years ago.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-distribution.png">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/E-PF2546-distribution.png">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aitmhend-dna.github.io/research/e-m183-recent-origin-2018.html">
+    <link rel="canonical" href="https://northafricanorigins.com/research/e-m183-recent-origin-2018.html">
 
     <!-- Favicon and Performance -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -53,7 +53,7 @@
       "description": "Summary of Solé-Morata et al. 2017 — whole Y-chromosome sequencing dating E-M81 TMRCA to ~2,000-3,000 years ago",
       "author": {
         "@type": "Organization",
-        "name": "Amazigh Lineage Heritage Project"
+        "name": "North African Amazigh Heritage Project"
       },
       "datePublished": "2026-02-13",
       "about": {
@@ -68,7 +68,7 @@
       },
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://aitmhend-dna.github.io/research/e-m183-recent-origin-2018.html"
+        "@id": "https://northafricanorigins.com/research/e-m183-recent-origin-2018.html"
       }
     }
     </script>
@@ -79,7 +79,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -220,7 +220,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
     </footer>
 
 </body>
