--- a/research/green-sahara-ancient-dna-2025.html
+++ b/research/green-sahara-ancient-dna-2025.html
@@ -8,25 +8,25 @@
     <title>Green Sahara Ancient DNA | Salem et al. 2025</title>
     <meta name="description" content="Summary of Salem et al. 2025 Nature study: ancient DNA from Green Sahara Libya reveals basal North African lineage and population dynamics ~7,000 years ago.">
     <meta name="keywords" content="Green Sahara DNA, ancient DNA North Africa, Salem 2025, Nature genetics, haplogroup N, Libya ancient genome, Holocene Sahara">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
     <meta property="og:title" content="Green Sahara Ancient DNA — Salem et al. 2025">
     <meta property="og:description" content="Ancient DNA from the Green Sahara reveals ancestral North African lineage with basal haplogroup N.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/research/green-sahara-ancient-dna-2025.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg">
+    <meta property="og:url" content="https://northafricanorigins.com/research/green-sahara-ancient-dna-2025.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Green Sahara Ancient DNA — Salem et al. 2025">
     <meta name="twitter:description" content="Ancient DNA from the Green Sahara reveals ancestral North African lineage.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/research/green-sahara-takarkori-rock-shelter-nature-2025.jpg">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aitmhend-dna.github.io/research/green-sahara-ancient-dna-2025.html">
+    <link rel="canonical" href="https://northafricanorigins.com/research/green-sahara-ancient-dna-2025.html">
 
     <!-- Favicon and Performance -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -53,7 +53,7 @@
       "description": "Summary of Salem et al. 2025 — ~7,000-year-old DNA from Libya revealing basal haplogroup N and Green Sahara population dynamics",
       "author": {
         "@type": "Organization",
-        "name": "Amazigh Lineage Heritage Project"
+        "name": "North African Amazigh Heritage Project"
       },
       "datePublished": "2026-02-13",
       "about": {
@@ -68,7 +68,7 @@
       },
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://aitmhend-dna.github.io/research/green-sahara-ancient-dna-2025.html"
+        "@id": "https://northafricanorigins.com/research/green-sahara-ancient-dna-2025.html"
       }
     }
     </script>
@@ -79,7 +79,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -220,7 +220,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
     </footer>
 
 </body>
