--- a/research/neolithic-iberia-morocco-2023.html
+++ b/research/neolithic-iberia-morocco-2023.html
@@ -8,25 +8,25 @@
     <title>Neolithic Iberia-Morocco Migration | 2023</title>
     <meta name="description" content="Summary of Villalba-Mouco et al. 2023 Nature study: ancient DNA from Neolithic Morocco confirms trans-Gibraltar migration from Iberia and Levant.">
     <meta name="keywords" content="Neolithic Morocco DNA, Villalba-Mouco 2023, trans-Gibraltar migration, Iberian Neolithic, ancient DNA Morocco, H1 haplogroup arrival, Nature genetics">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
     <meta property="og:title" content="Neolithic Iberia-Morocco Migration &mdash; Villalba-Mouco et al. 2023">
     <meta property="og:description" content="Ancient DNA from Neolithic Morocco confirms European ancestry and trans-Gibraltar migration.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/research/neolithic-iberia-morocco-2023.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/map-maghreb.png">
+    <meta property="og:url" content="https://northafricanorigins.com/research/neolithic-iberia-morocco-2023.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/map-maghreb.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Neolithic Iberia-Morocco Migration &mdash; Villalba-Mouco et al. 2023">
     <meta name="twitter:description" content="Ancient DNA from Neolithic Morocco confirms trans-Gibraltar migration routes.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/map-maghreb.png">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/map-maghreb.png">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aitmhend-dna.github.io/research/neolithic-iberia-morocco-2023.html">
+    <link rel="canonical" href="https://northafricanorigins.com/research/neolithic-iberia-morocco-2023.html">
 
     <!-- Favicon and Performance -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -53,7 +53,7 @@
       "description": "Summary of Villalba-Mouco et al. 2023 &mdash; ancient DNA from Neolithic Morocco revealing European Neolithic ancestry and trans-Gibraltar migration",
       "author": {
         "@type": "Organization",
-        "name": "Amazigh Lineage Heritage Project"
+        "name": "North African Amazigh Heritage Project"
       },
       "datePublished": "2026-02-13",
       "about": {
@@ -68,7 +68,7 @@
       },
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://aitmhend-dna.github.io/research/neolithic-iberia-morocco-2023.html"
+        "@id": "https://northafricanorigins.com/research/neolithic-iberia-morocco-2023.html"
       }
     }
     </script>
@@ -79,7 +79,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -208,7 +208,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
     </footer>
 
 </body>
