--- a/research/north-african-mitogenomes-2025.html
+++ b/research/north-african-mitogenomes-2025.html
@@ -8,25 +8,25 @@
     <title>North African Mitogenomes | Colombo et al. 2025</title>
     <meta name="description" content="Summary of Colombo et al. 2025: massive mitogenome survey of 733 modern and 43 ancient samples reveals H1 subclade patterns and female-mediated dispersals.">
     <meta name="keywords" content="North African mitogenomes, H1 haplogroup, mtDNA North Africa, Colombo 2025, Scientific Reports, maternal lineage Amazigh, mitochondrial DNA survey">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
     <meta property="og:title" content="North African Mitogenomes &mdash; Colombo et al. 2025">
     <meta property="og:description" content="Massive mitogenome survey confirms H1 subclade distributions and female-mediated dispersals across North Africa.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/map-h-haplo.png">
+    <meta property="og:url" content="https://northafricanorigins.com/research/north-african-mitogenomes-2025.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/map-h-haplo.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="North African Mitogenomes &mdash; Colombo et al. 2025">
     <meta name="twitter:description" content="Massive mitogenome survey confirms H1 subclade distributions across North Africa.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/map-h-haplo.png">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/map-h-haplo.png">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html">
+    <link rel="canonical" href="https://northafricanorigins.com/research/north-african-mitogenomes-2025.html">
 
     <!-- Favicon and Performance -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -53,7 +53,7 @@
       "description": "Summary of Colombo et al. 2025 &mdash; 733 modern and 43 ancient mitogenomes surveyed for North African maternal lineage patterns",
       "author": {
         "@type": "Organization",
-        "name": "Amazigh Lineage Heritage Project"
+        "name": "North African Amazigh Heritage Project"
       },
       "datePublished": "2026-02-13",
       "about": {
@@ -68,7 +68,7 @@
       },
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://aitmhend-dna.github.io/research/north-african-mitogenomes-2025.html"
+        "@id": "https://northafricanorigins.com/research/north-african-mitogenomes-2025.html"
       }
     }
     </script>
@@ -79,7 +79,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -208,7 +208,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
     </footer>
 
 </body>
