--- a/start-here.html
+++ b/start-here.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Start Here | Amazigh Lineage Heritage</title>
+    <title>Start Here | North African Amazigh Heritage</title>
     <meta name="description" content="New to the site? Start with one of three guided paths: genealogy beginner, research reader, or Chtouka/Souss-Massa history.">
     <meta name="keywords" content="Amazigh start guide, genealogy beginner path, North African genetics reading path, Chtouka history guide, Souss-Massa introduction">
-    <meta name="author" content="Amazigh Lineage Heritage Project">
+    <meta name="author" content="North African Amazigh Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Amazigh Lineage Heritage">
-    <meta property="og:title" content="Start Here | Amazigh Lineage Heritage">
+    <meta property="og:site_name" content="North African Amazigh Heritage">
+    <meta property="og:title" content="Start Here | North African Amazigh Heritage">
     <meta property="og:description" content="Choose your reading path: genealogy beginner, research reader, or Chtouka/Souss-Massa history.">
-    <meta property="og:url" content="https://aitmhend-dna.github.io/start-here.html">
-    <meta property="og:image" content="https://aitmhend-dna.github.io/img/hero-dna-morocco.jpg">
+    <meta property="og:url" content="https://northafricanorigins.com/start-here.html">
+    <meta property="og:image" content="https://northafricanorigins.com/img/hero-dna-morocco.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Start Here | Amazigh Lineage Heritage">
+    <meta name="twitter:title" content="Start Here | North African Amazigh Heritage">
     <meta name="twitter:description" content="A guided entry page for first-time visitors with 3 routes.">
-    <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/hero-dna-morocco.jpg">
+    <meta name="twitter:image" content="https://northafricanorigins.com/img/hero-dna-morocco.jpg">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aitmhend-dna.github.io/start-here.html">
+    <link rel="canonical" href="https://northafricanorigins.com/start-here.html">
 
     <!-- Favicon and Performance -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -50,11 +50,11 @@
       "@type": "WebPage",
       "name": "Start Here",
       "description": "Entry page for first-time visitors with three guided reading routes",
-      "url": "https://aitmhend-dna.github.io/start-here.html",
+      "url": "https://northafricanorigins.com/start-here.html",
       "isPartOf": {
         "@type": "WebSite",
-        "name": "Amazigh Lineage Heritage",
-        "url": "https://aitmhend-dna.github.io/"
+        "name": "North African Amazigh Heritage",
+        "url": "https://northafricanorigins.com/"
       }
     }
     </script>
@@ -65,7 +65,7 @@
 
     <header role="banner">
         <div class="header-content">
-            <h1>Amazigh Lineage Heritage</h1>
+            <h1>North African Amazigh Heritage</h1>
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
@@ -166,7 +166,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Amazigh Lineage Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
+        <p>&copy; 2026 North African Amazigh Heritage Project | Preserving Chtouka heritage of the Souss-Massa</p>
     </footer>
 </body>
 </html>
