Add new icons and update logo references for North African Amazigh Heritage

--- a/lineage.html
+++ b/lineage.html
@@ -98,7 +98,7 @@
         "name": "North African Amazigh Heritage",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://northafricanorigins.com/img/E-PF2546-map.png"
+          "url": "https://northafricanorigins.com/icon-512x512.png"
         }
       },
       "mainEntityOfPage": {
